--- a/languages/lazaruside.he.po
+++ b/languages/lazaruside.he.po
@@ -6910,7 +6910,7 @@ msgid "Unable to load package"
 msgstr ""
 
 #: lazarusidestrconsts:lispkgmangunabletoopenthepackage
-msgid "Unable to open the package %s%s%s.%sThis package was marked for for installation."
+msgid "Unable to open the package %s%s%s.%sThis package was marked for installation."
 msgstr ""
 
 #: lazarusidestrconsts:lisunabletoreadfile
