updated COPYING and README for new files
 SVN 7237@trunk

--- a/ideintf/README
+++ b/ideintf/README
@@ -1,1 +1,4 @@
 This directory contains the IDE interfaces for experts/plugins.
+
+These files are under the modified LGPL as described in COPYING.modifiedLGPL.
+
