--- a/languages/README
+++ b/languages/README
@@ -1,3 +1,16 @@
+Quick Start for translators:
+
+For example finnish translation:
+Search for all *.fi.po files. They are simple text files, with an easy format.
+Edit them with programs like kbabel.
+Run 'sh localize.sh' to update translations. This will create the various .mo
+files.
+Send the updated xxx.fi.po files to patch@dommelstein.net.
+Do not send diffs for .po files.
+
+
+Now the background:
+
 The <lazarusdir>/languages directory contains all the stuff for
 internationalization of the lazarus IDE.
 
